# SymProp

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  contact-5.tns  s3ttmctc.cpp  symtens_ttmc.cpp  symtucker.cpp
include/detail/: compressed_dtree.hpp  dtree.hpp  tucker.hpp
include/detail/dense/: matrixops.hpp  symtensor.hpp  symtensor_array.hpp  symtensor_base.hpp
include/detail/sparse/: matrixops.hpp  spsymtensor.hpp
include/utils/: buffer2d.hpp  dispatcher.hpp  function_timer.hpp  loader.hpp  threading.hpp  types.hpp
src/: compressed_dtree.cpp  dtree.cpp  tucker.cpp
src/dense/: matrixops.cpp  symtensor.cpp  symtensor_array.cpp
src/sparse/: matrixops.cpp  spsymtensor.cpp
src/utils/: function_timer.cpp  loader.cpp
tests/: CMakeLists.txt  test_compressed_dtree.cpp  test_dtree.cpp  test_matrixops.cpp  test_symtensor.cpp  utils.cpp  utils.h
